ignore and some changes are done

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,23 @@
 /xCubeApplication/.vs
 /.vs
 /xCubeApplication/obj/Debug/net8.0-windows/ref/xCubeApplication.dll
+/xCubeApplication/bin/Debug/net8.0-windows/xCubeApplication.dll
+/xCubeApplication/bin/Debug/net8.0-windows/xCubeApplication.exe
+/xCubeApplication/bin/Debug/net8.0-windows/xCubeApplication.pdb
+/xCubeApplication/obj/Debug/net8.0-windows/ref/xCubeApplication.dll
+/xCubeApplication/obj/Debug/net8.0-windows/refint/xCubeApplication.dll
+/xCubeApplication/obj/Debug/net8.0-windows/apphost.exe
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.AssemblyInfo.cs
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.AssemblyInfoInputs.cache
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.dll
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.g.resources
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.pdb
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.sourcelink.json
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication_pntkfq5m_wpftmp.AssemblyInfo.cs
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication_pntkfq5m_wpftmp.AssemblyInfoInputs.cache
+/xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication_pntkfq5m_wpftmp.assets.cache
+*.BuildWithSkipAnalyzers
+*.editorconfig
+*.cs
+*.json
+*.cache
