--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication_MarkupCompile.i.lref
 /xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.csproj.CoreCompileInputs.cache
 /xCubeApplication/obj/Debug/net8.0-windows/xCubeApplication.csproj.FileListAbsolute.txt
+/xCubeApplication/obj/Debug/net8.0-windows/GeneratedInternalTypeHelper.g.cs
