db context added

--- a/xCubeApplication/App.config
+++ b/xCubeApplication/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="dbConnection" value="Server=SV37\SQLEXPRESS;Database=TestingDB;Trusted_Connection=True;"/>
+		<add key="dbConnection" value="Server=DESKTOP-PUOF93T\SQLEXPRESS;Database=TestingDB;Trusted_Connection=True;TrustServerCertificate=True;"/>
 	</appSettings>
 </configuration>
